# passwd-crypto

./: LICENSE  README.md  build.py  setup.cfg  setup.py  testPasswords.txt
.github/workflows/: pybuilder.yml  release.yaml
passwd_crypto.egg-info/: PKG-INFO  SOURCES.txt
src/passwdcrypto/: __init__.py
src/passwordcrypto/: __init__.py
src/unittest/python/: passwordcrypto.py  passwordcrypto_tests.py  testPasswords.txt
