[metadata]
name = passwd-crypto
version = 0.1
author = Muxutruk
author_email = musutruk.music+passwd@gmail.com
description = Password manager with Fernet encryption
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Muxutruk2/passwd-crypto
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    cryptography